[gd_scene load_steps=2 format=3 uid="uid://btblf2mdnky7n"]

[ext_resource type="Script" path="res://src/projects/choose_installation.gd" id="1_we6o6"]

[node name="ChooseInstallation" type="ConfirmationDialog"]
initial_position = 2
title = "Choose Godot Version"
size = Vector2i(480, 180)
visible = true
script = ExtResource("1_we6o6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 472.0
offset_bottom = 131.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show:"

[node name="ManagedCustomFilter" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Both"
popup/item_0/id = 0
popup/item_1/text = "Managed"
popup/item_1/id = 1
popup/item_2/text = "Custom"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sort:"

[node name="AscDescOption" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Desc"
popup/item_0/id = 0
popup/item_1/text = "Asc"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PreAlpha" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Dev"

[node name="Alpha" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Alpha"

[node name="Beta" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Beta"

[node name="Rc" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "RC"

[node name="Mono" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Mono"

[node name="Uninstalled" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
button_pressed = true
text = "Not installed"

[node name="VersionOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "4.0.3"
popup/item_0/id = 0

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ManagedCustomFilter" to="." method="_some_filter_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/AscDescOption" to="." method="_some_filter_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/PreAlpha" to="." method="_some_filter_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Alpha" to="." method="_some_filter_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Beta" to="." method="_some_filter_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Rc" to="." method="_some_filter_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Mono" to="." method="_some_filter_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Uninstalled" to="." method="_some_filter_changed"]
